--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".DetalhesActivity">
+        </activity>
+        <activity android:name=".AreasActivity">
+        </activity>
+        <activity android:name=".LegislacaoActivity">
+        </activity>
+        <activity android:name=".OptionActivity">
+        </activity>
+        <activity android:name=".EstadoActivity">
+        </activity>
+        <activity android:name=".CadastroActivity">
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
